tests/interpreter_tests/regexp-04.test
################################################################################
#    Copyright (c) 2012-2013, KAIST.
#    All rights reserved.
#
#    Use is subject to license terms.
#
#    This distribution may include materials developed by third parties.
################################################################################
tests=regexp-04
INTERPRETER_TESTS_DIR=${JS_HOME}/tests/interpreter_tests
interpret
interpret_out_WCIequals=\
Throw(SyntaxError) @ ${JS_HOME}/tests/interpreter_tests/regexp-04.js:1:5-22\n
interpret_err_equals=
