tests/interpreter_tests/regexp-04.js
a = new RegExp("\42")
